Validate `context` before use in ValidateStreamConsumerGLTextureExternalAttribsNV.

Firefox bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1608235

Bug: angleproject:4333
Change-Id: I957b6412f7c744e4bbaa7d8084b3c81ee58d45ca
Reviewed-on: https://chromium-review.googlesource.com/c/angle/angle/+/2015838
Reviewed-by: Geoff Lang <geofflang@chromium.org>
Reviewed-by: Jamie Madill <jmadill@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>